add validation errors engine

--- a/src/domains/templates/auth/register.html
+++ b/src/domains/templates/auth/register.html
@@ -1,5 +1,7 @@
 <html>
     <h1>{{ .Title }}</h1>
+    
+    <h3> {{ .Message.Context }} </h3>
 
     <form action="{{ .Form.Action }}" method="{{ .Form.Method }}">
         <label>Username</label>
