added some fields to user model

--- a/src/domains/templates/auth/register.html
+++ b/src/domains/templates/auth/register.html
@@ -5,7 +5,10 @@
 
     <form action="{{ .Form.Action }}" method="{{ .Form.Method }}">
         <label>Username</label>
-        <input type="text" name="username" value=""/>
+        <input type="text" name="name" value=""/>
+
+        <label>Email</label>
+        <input type="email" name="email" value=""/>
 
         <label>Password</label>
         <input type="password" name="password" value=""/>
