serve login image

--- a/templates/login.gohtml
+++ b/templates/login.gohtml
@@ -4,6 +4,8 @@
     </head>
 
     <body>
+        <img src="/login-image" />
+
         <form action="" method="POST" />
             <label>Username</label>
             <input type="text" name="username" value = "{{ .Username }}"/>
