serve files uging julien schmidt

--- a/templates/login.gohtml
+++ b/templates/login.gohtml
@@ -4,7 +4,7 @@
     </head>
 
     <body>
-        <img src="/login-image" />
+        <img src="/statics/img/login.jpg" />
 
         <form action="" method="POST" />
             <label>Username</label>
