logout using deleting cookie

--- a/templates/login.gohtml
+++ b/templates/login.gohtml
@@ -4,6 +4,9 @@
     </head>
 
     <body>
+        <a href="/logout">Logout</a>
+        <br/>
+
         <img src="/statics/img/login.jpg" />
 
         <form action="" method="POST" enctype="multipart/form-data"/>
