--- a/templates/login.gohtml
+++ b/templates/login.gohtml
@@ -4,20 +4,14 @@
     </head>
 
     <body>
-        <a href="/logout">Logout</a>
-        <br/>
-
         <img src="/statics/img/login.jpg" />
 
         <form action="" method="POST" enctype="multipart/form-data"/>
             <label>Username</label>
-            <input type="text" name="username" value = "{{ .Username }}"/>
+            <input type="text" name="username" value = ""/>
 
             <label>Name</label>
-            <input type="text" name="name" value="{{ .Name }}"/>
-
-            <label>Profile</label>
-            <input type="file" name="profile" />
+            <input type="text" name="password" value=""/>
 
             <input type="submit" name="submit" value="submit"/> 
         </form>
