--- a/templates/feed.gohtml
+++ b/templates/feed.gohtml
@@ -72,7 +72,7 @@
                     <div class="media-body u-shadow-v18 g-bg-secondary g-pa-30">
                         <div class="g-mb-15">
                             <h5 class="h5 g-color-gray-dark-v1 mb-0">{{ .User.Name }}</h5>
-                            <span class="g-color-gray-dark-v4 g-font-size-12">5 days ago</span>
+                            <span class="g-color-gray-dark-v4 g-font-size-12">{{ FormatDate .CreatedAt }}</span>
                         </div>
 
                         <p>{{ .Content }}</p>
