add single post

--- a/templates/layouts/post.gohtml
+++ b/templates/layouts/post.gohtml
@@ -32,7 +32,7 @@
                 </form>
             </li>
             <li class="list-inline-item ml-auto">
-                <a class="u-link-v5 g-color-gray-dark-v4 g-color-primary--hover" href="#!">
+                <a class="u-link-v5 g-color-gray-dark-v4 g-color-primary--hover" href="/post/{{ .Id }}">
                     <i class="fa fa-reply g-pos-rel g-top-1 g-mr-3"></i>
                     Reply
                 </a>
