add reply count

--- a/templates/layouts/post.gohtml
+++ b/templates/layouts/post.gohtml
@@ -24,7 +24,7 @@
             <li class="list-inline-item ml-auto">
                 <a class="u-link-v5 g-color-gray-dark-v4 g-color-primary--hover" href="/post/{{ .Id }}">
                     <i class="fa fa-reply g-pos-rel g-top-1 g-mr-3"></i>
-                    Reply
+                    {{ .Replies }} Reply
                 </a>
             </li>
         </ul>
