move sidebar to template

--- a/templates/feed.gohtml
+++ b/templates/feed.gohtml
@@ -3,56 +3,7 @@
 <body>
     <div class="row">
         <div class="col-md-4">
-            <div class="row profile">
-                <div class="text-center profile-sidebar">
-                    <!-- SIDEBAR USERPIC -->
-                    <div class="profile-userpic">
-                        <img src="{{ .Data.User.ProfileUrl }} " class="img-responsive" alt="">
-                    </div>
-                    <!-- END SIDEBAR USERPIC -->
-                    <!-- SIDEBAR USER TITLE -->
-                    <div class="profile-usertitle">
-                        <div class="profile-usertitle-name">
-                            {{ .Data.User.Name }}
-                        </div>
-                        <div class="profile-usertitle-job">
-                            {{ .Data.User.Username }}
-                        </div>
-                    </div>
-                    <!-- END SIDEBAR USER TITLE -->
-                    <!-- SIDEBAR BUTTONS -->
-                    <div class="profile-userbuttons">
-                        <button type="button" class="btn btn-success btn-sm">Follow</button>
-                        <a href="/logout"><button type="button" class="btn btn-danger btn-sm">Logout</button></a>
-                    </div>
-                    <!-- END SIDEBAR BUTTONS -->
-                    <!-- SIDEBAR MENU -->
-                    <div class="profile-usermenu">
-                        <ul class="nav">
-                            <li class="active">
-                                <a href="#">
-                                    <i class="glyphicon glyphicon-home"></i>
-                                    Overview </a>
-                            </li>
-                            <li>
-                                <a href="#">
-                                    <i class="glyphicon glyphicon-user"></i>
-                                    Account Settings </a>
-                            </li>
-                            <li>
-                                <a href="#" target="_blank">
-                                    <i class="glyphicon glyphicon-ok"></i>
-                                    Tasks </a>
-                            </li>
-                            <li>
-                                <a href="#">
-                                    <i class="glyphicon glyphicon-flag"></i>
-                                    Help </a>
-                            </li>
-                        </ul>
-                    </div>
-                </div>
-            </div>
+            {{ template "sidebar" . }}
         </div>
         <div class="col col-md-8">
             <div class="col-md-11">
