--- a/templates/single-post.gohtml
+++ b/templates/single-post.gohtml
@@ -1,6 +1,8 @@
 {{ template "header" . }}
 
 <body>
+    <div class="col col-md-4">
+    </div>
     <div class="pl-2 col-md-8">
 
         <div class="row">
