link overview to feed

--- a/templates/layouts/sidebar.gohtml
+++ b/templates/layouts/sidebar.gohtml
@@ -26,9 +26,9 @@
             <div class="profile-usermenu">
                 <ul class="nav">
                     <li class="active">
-                        <a href="#">
+                        <a href="/feed">
                             <i class="glyphicon glyphicon-home"></i>
-                            Overview </a>
+                            Feed </a>
                     </li>
                     <li>
                         <a href="#">
