--- a/templates/signup.gohtml
+++ b/templates/signup.gohtml
@@ -1,25 +1,95 @@
-<!DOCTYPE html>
-    <head>
-        <title>Signup page</title>
-    </head>
+{{ template "header" . }}
 
-    <body>
-        <img src="/statics/img/signup.jpg" />
+<body>
+    <form action="" method="POST" enctype="multipart/form-data" />
+    <section class="vh-100" style="background-color: #eee;">
+        <div class="container h-100">
+            <div class="row d-flex justify-content-center align-items-center h-100">
+                <div class="col-lg-12 col-xl-11">
+                    <div class="card text-black" style="border-radius: 25px;">
+                        <div class="card-body p-md-5">
+                            <div class="row justify-content-center">
+                                <div class="col-md-10 col-lg-6 col-xl-5 order-2 order-lg-1">
 
-        <form action="" method="POST" enctype="multipart/form-data"/>
-            <label>Username</label>
-            <input type="text" name="username" value = "{{ .Username }}"/>
+                                    <p class="text-center h1 fw-bold mb-5 mx-1 mx-md-4 mt-4">Sign up</p>
 
-            <label>Name</label>
-            <input type="text" name="name" value="{{ .Name }}"/>
+                                    <form class="mx-1 mx-md-4">
 
-            <label>Profile</label>
-            <input type="file" name="profile" />
+                                        <div class="d-flex flex-row align-items-center mb-4">
+                                            <i class="fas fa-user fa-lg me-3 fa-fw"></i>
+                                            <div class="form-outline flex-fill mb-0">
+                                                <input type="text" id="form3Example1c" name="name"
+                                                    class="form-control" />
+                                                <label class="form-label" for="form3Example1c">Your Name</label>
+                                            </div>
+                                        </div>
 
-            <label>Password</label>
-            <input type="password" name="password"/>
+                                        <div class="d-flex flex-row align-items-center mb-4">
+                                            <i class="fas fa-envelope fa-lg me-3 fa-fw"></i>
+                                            <div class="form-outline flex-fill mb-0">
+                                                <input type="text" name="username" id="form3Example3c"
+                                                    class="form-control" />
+                                                <label class="form-label" for="form3Example3c">Username</label>
+                                            </div>
+                                        </div>
 
-            <input type="submit" name="submit" value="submit"/> 
-        </form>
-    </body>
+                                        <div class="d-flex flex-row align-items-center mb-4">
+                                            <i class="fas fa-lock fa-lg me-3 fa-fw"></i>
+                                            <div class="form-outline flex-fill mb-0">
+                                                <input type="password" name="password" id="form3Example4c"
+                                                    class="form-control" />
+                                                <label class="form-label" for="form3Example4c">Password</label>
+                                            </div>
+                                        </div>
+
+                                        <div class="d-flex flex-row align-items-center mb-4">
+                                            <i class="fas fa-key fa-lg me-3 fa-fw"></i>
+                                            <div class="form-outline flex-fill mb-0">
+                                                <input type="password" name="password_confirmation" id="form3Example4cd"
+                                                    class="form-control" />
+                                                <label class="form-label" for="form3Example4cd">Repeat your
+                                                    password</label>
+                                            </div>
+                                        </div>
+
+                                        <div class="d-flex flex-row align-items-center mb-4">
+                                            <i class="fas fa-lock fa-lg me-3 fa-fw"></i>
+                                            <div class="form-outline flex-fill mb-0">
+                                                <input type="file" name="profile" id="form3Example4c"
+                                                    class="form-control" />
+                                                <label class="form-label" for="form3Example4c">Profile picture</label>
+                                            </div>
+                                        </div>
+
+                                        <div class="form-check d-flex justify-content-center mb-5">
+                                            <input class="form-check-input me-2" name="agreement" type="checkbox"
+                                                value="" id="form2Example3c" />
+                                            <label class="form-check-label" for="form2Example3">
+                                                I agree all statements in <a href="#!">Terms of service</a>
+                                            </label>
+                                        </div>
+
+                                        <div class="d-flex justify-content-center mx-4 mb-3 mb-lg-4">
+                                            <button type="submit" class="btn btn-primary btn-lg">Register</button>
+                                        </div>
+
+                                    </form>
+
+                                </div>
+                                <div class="col-md-10 col-lg-6 col-xl-7 d-flex align-items-center order-1 order-lg-2">
+
+                                    <img src="https://mdbcdn.b-cdn.net/img/Photos/new-templates/bootstrap-registration/draw1.webp"
+                                        class="img-fluid" alt="Sample image">
+
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    </form>
+</body>
+
 </html>
