--- a/templates/layouts/post.gohtml
+++ b/templates/layouts/post.gohtml
@@ -4,7 +4,7 @@
         alt="Image Description">
     <div class="media-body u-shadow-v18 g-bg-secondary g-pa-30">
         <div class="g-mb-15">
-            <h5 class="h5 g-color-gray-dark-v1 mb-0">{{ .User.Name }}</h5>
+            <a href="/user/{{ .User.Username }}"><h5 class="h5 g-color-gray-dark-v1 mb-0">{{ .User.Name }}</h5></a>
             <span class="g-color-gray-dark-v4 g-font-size-12">{{ FormatDate .CreatedAt }}</span>
         </div>
 
