--- a/templates/layouts/sidebar.gohtml
+++ b/templates/layouts/sidebar.gohtml
@@ -35,7 +35,7 @@
                             Feed </a>
                     </li>
                     <li>
-                        <a href="#">
+                        <a href="/setting">
                             <i class="glyphicon glyphicon-user"></i>
                             Account Settings </a>
                     </li>
